# study-app

./: .gitignore  .pre-commit-config.yaml  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-tests.yaml  frontend-tests.yaml
scripts/: setup  setup_project
src/backend/: Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/backend/tests/: README.md
src/frontend/: Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
