[project]
name = "study-app-backend"
version = "0.0.0"
description = "Backend API for tracking study progress"
readme = "README.md"
authors = [
    { name = "Dalton", email = "dalton@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "uvicorn>=0.34.2",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
